# CS100-final-project

./: .gitignore  CMakeLists.txt  README.md
header/: arcaneBlast.h  armor.h  backstab.h  bludgeon.h  boss.h  bosspart1.h  bosspart2.h  bosspart3.h  bosspart4.h  character.h  cutthroat.h  encounterManager.h  enemy.h  finalBoss.h  game.h  goblin.h  goblinBoss.h  incinerate.h  item.h  itemManager.h  lifeLeech.h  lifeleech.h  mage.h  orc.h  orcBoss.h  pickpocket.h  pirate.h  pirateBoss.h  rogue.h  royalGuard.h  shatter.h  slam.h  spell.h  statsManager.h  trinket.h  user.h  warrior.h  weapon.h
header/screens/: characterSelect.h  city.h  combat.h  inGameMenu.h  inventory.h  screen.h  startMenu.h  travel.h
source/: CMakeLists.txt  arcaneBlast.cpp  armor.cpp  backstab.cpp  bludgeon.cpp  boss.cpp  bosspart1.cpp  bosspart2.cpp  bosspart3.cpp  bosspart4.cpp  character.cpp  characterSelect.cpp  city.cpp  combat.cpp  cutthroat.cpp  encounterManager.cpp  enemy.cpp  finalBoss.cpp  game.cpp  goblin.cpp  goblinBoss.cpp  inGameMenu.cpp  incinerate.cpp  inventory.cpp  item.cpp  itemManager.cpp  lifeLeech.cpp  lifeleach.cpp  lifeleech.cpp  mage.cpp  main.cpp  orc.cpp  orcBoss.cpp  pickpocket.cpp  pirate.cpp  pirateBoss.cpp  rogue.cpp  royalGuard.cpp  screen.cpp  shatter.cpp  (+10 more)
source/res/: characterSelectScreen.txt  cityScreen.txt  combatScreen.txt  gameMenuScreen.txt  inventoryScreen.txt  startMenu.txt  travelScreen.txt
testing/: CMakeLists.txt  allTests.cpp  armorTests.cpp  bossTests.cpp  characterSelectTesting.cpp  characterTests.cpp  cityTests.cpp  combatTests.cpp  encounterManagerTests.cpp  enemyTesting.cpp  gameTesting.cpp  goblinBossTests.cpp  goblinTests.cpp  inGameMenuTesting.cpp  inventoryTests.cpp  itemManagerTests.cpp  itemTests.cpp  mageTests.cpp  orcBossTests.cpp  orcTests.cpp  pirateTests.cpp  rogueTests.cpp  royalGuardTests.cpp  runCharacterSelectTests  runInventoryTests  runItemManagerTests  runItemTests  runMageTests  runOrcTests  runPirateTests  runRoyalGuardTests  runWarriorTests  screensTest.cpp  spellsTests.cpp  startMenuTesting.cpp  statsManagerTests.cpp  travelTests.cpp  trinketTests.cpp  userTests.cpp  warriorTests.cpp  (+1 more)
